# ChangeLog for app-laptop/toshset
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*toshset-1.75 (10 Jun 2009)

  10 Jun 2009; Markos Chandras <hwoarang@gentoo.org> -toshset-1.72.ebuild,
  +toshset-1.75.ebuild:
  Version bump, remove old, clean up, EAPI2fi it

  19 Jun 2007; Ali Polatel (hawking) <polatel@gmail.com>
  toshset-1.72.ebuild:
  added trailing slash to HOMEPAGE URI, cosmetics

  23 Apr 2007; AK <gentoo@horizon.ath.cx> toshset-1.72.ebuild:
  clean up and change src_uri to mirror://debian

  12 Apr 2007; AK <gentoo@horizon.ath.cx> +toshset-1.72.ebuild,
  +metadata.xml:
  New Ebuild for bug 113487
