@@ -1,4 +1,4 @@
 DIST toshset-1.75.tgz 78926 RMD160 2fea1245495a358af3305e62571db016a4bd18ee SHA1 7ac0cf76a673f6eec56ef884eb80ae0d7d7260db SHA256 5ee6470ac11a7b9647e8d1cee0c017f9d35dc827983907dd8058db56a5db5fc8
-EBUILD toshset-1.75.ebuild 720 RMD160 70d688ece274743fc3cdc5dd4c38af900d384cd8 SHA1 437fa7ae6637a570c16fdeb63d3d93c34bd971d2 SHA256 c2825185319a26c1c9d37e4d5d08f34489ca47b5ef5308423a51e002cba2d9b9
-MISC ChangeLog 651 RMD160 76b9492b84bb6564494054271c27ca662eb3dc55 SHA1 01eebe052e0be5ecee8616abd558d430f300fa42 SHA256 4965b3cbbd4399ec8ffcbbb2654de580b35f4ae9a0023d528f10118abe9800d6
+EBUILD toshset-1.75.ebuild 699 RMD160 7cd789606bd672f3ceadf0c0626801e8c7664837 SHA1 8c55a5b99301d98634a0ff2678cf862fe34ed376 SHA256 e78d112171b64b103b579344ad4e3f657b4bbb8376f63d09af4ee069963c642b
+MISC ChangeLog 786 RMD160 08fe24f1d0d10baad5b5f3a203a57f70c19c8b6b SHA1 962027321a9c5d7602bf3db764b30d2ace423a32 SHA256 340c042db02a9a060b7692d1ba9605b6f874a1d0c0eaecabaa6e7236b01038a2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
